--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,11 @@
     socket.emit('mensaje',{nombre:'fernando'});
 
     socket.on('mensaje', function(payload){
-        console.log('Escuchando', payload);
+    console.log('Escuchando', payload);
+    }); 
+    socket.on('active-bands', function(bands){
+        console.clear()
+    console.log('Escuchando', bands);
     });
     </script>
 </body>
